##### Generate connman_proxy_gdbus_generated.{c,h}
generated_src = gnome.gdbus_codegen('connman_proxy_gdbus_generated',
                    sources: ['connman-service.xml',
                              'connman-manager.xml',
                              'connman-technology.xml',
                              'connman-agent.xml',
                              'connman-clock.xml'])
